# ChangeLog for dev-ruby/thinking-sphinx
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*thinking-sphinx-2.0.13 (14 Sep 2012)

  14 Sep 2012; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-2.0.13.ebuild:
  Version bump.

  08 Jun 2012; Hans de Graaff <graaff@gentoo.org>
  -thinking-sphinx-1.3.20.ebuild, -thinking-sphinx-1.4.5.ebuild,
  -thinking-sphinx-2.0.7.ebuild, -thinking-sphinx-2.0.10.ebuild:
  Remove old versions.

*thinking-sphinx-2.0.11 (09 Mar 2012)

  09 Mar 2012; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-2.0.11.ebuild:
  Version bump.

  04 Dec 2011; Hans de Graaff <graaff@gentoo.org>
  -thinking-sphinx-2.0.9.ebuild:
  Remove problematic version.

  28 Nov 2011; Hans de Graaff <graaff@gentoo.org>
  thinking-sphinx-2.0.10.ebuild:
  Update dependencies to match gem.

*thinking-sphinx-2.0.10 (28 Nov 2011)

  28 Nov 2011; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-2.0.10.ebuild:
  Version bump.

*thinking-sphinx-2.0.9 (12 Oct 2011)

  12 Oct 2011; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-2.0.9.ebuild:
  Version bump.

  16 Sep 2011; Hans de Graaff <graaff@gentoo.org> thinking-sphinx-2.0.7.ebuild:
  Move into separate slot.

*thinking-sphinx-2.0.7 (16 Sep 2011)

  16 Sep 2011; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-2.0.7.ebuild:
  Version bump.

*thinking-sphinx-1.4.6 (01 Jul 2011)

  01 Jul 2011; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-1.4.6.ebuild:
  Version bump.

  29 Jun 2011; Hans de Graaff <graaff@gentoo.org>
  thinking-sphinx-1.3.20.ebuild, thinking-sphinx-1.4.0.ebuild,
  thinking-sphinx-1.4.5.ebuild:
  Move for us incompatible version into a slot.

*thinking-sphinx-1.4.5 (28 Jun 2011)

  28 Jun 2011; Hans de Graaff <graaff@gentoo.org>
  +thinking-sphinx-1.4.5.ebuild:
  Version bump.

  07 Jan 2011; Hans de Graaff <graaff@gentoo.org>
  thinking-sphinx-1.3.20.ebuild, thinking-sphinx-1.4.0.ebuild:
  Keyword ~x86-macos.
