@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/thinking-sphinx
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  11 Jan 2013; Hans de Graaff <graaff@gentoo.org>
+  -thinking-sphinx-1.4.0.ebuild, -thinking-sphinx-1.4.6.ebuild:
+  Remove old slots that I no longer need.
 
 *thinking-sphinx-2.0.13 (14 Sep 2012)
 
